# circt

./: CMakeLists.txt  README.md
.github/workflows/: buildAndTest.yml
include/circt/: InitAllDialects.h  InitAllPasses.h  InitAllTranslations.h
include/circt-c/Dialect/: FIRRTL.h
include/circt/Conversion/: ImportVerilog.h  MooreToCore.h  Passes.td
include/circt/Transforms/: Passes.h  Passes.td
integration_test/: lit.cfg.py
integration_test/Bindings/Python/: import.py
lib/Bindings/Python/: CIRCTModule.cpp  CMakeLists.txt  FIRRTLOps.td
lib/CAPI/Dialect/: CMakeLists.txt  FIRRTL.cpp
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Conversion/FIRRTLToHW/: CMakeLists.txt  LowerToHW.cpp
lib/Conversion/HandshakeToFIRRTL/: HandshakeToFIRRTL.cpp
lib/Conversion/ImportVerilog/: CMakeLists.txt  Expression.cpp  Expressions.cpp  HierarchicalNames.cpp  ImportVerilog.cpp  ImportVerilogInternals.h  Statement.cpp  Statements.cpp  Structure.cpp  TimingControl.cpp  Types.cpp
lib/Conversion/LLHDToLLVM/: LLHDToLLVM.cpp
lib/Dialect/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt  PrintKnownValues.cpp
test/: CMakeLists.txt  lit.cfg.py
test/circt-opt/: commandline.mlir
test/firtool/: memory.fir
tools/: CMakeLists.txt
tools/circt-opt/: CMakeLists.txt
tools/circt-reduce/: CMakeLists.txt
tools/circt-vcd-testbench/: CMakeLists.txt  VCDParser.cpp  VCDParser.h  circt-vcd-testbench.cpp
tools/circt-verify/: CMakeLists.txt  circt-verify.cpp
tools/circt-verilog/: CMakeLists.txt  circt-verilog.cpp
tools/fir-isolate/: CMakeLists.txt  fir-isolate.cpp
(+128 files in other folders)
